...
          {/* Form */}
          <View style={styles.form}>
            <LanguageControl />
            <ErrorBanner message={phrase(error)} />
            <Input
              label={phrase("Email")}
              placeholder="you@example.com"
              value={email}
              onChangeText={setEmail}
              keyboardType="email-address"
              autoCapitalize="none"
              autoCorrect={false}
              returnKeyType="next"
...
